# sparse-voxel-octrees

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  run_builder.bat  run_viewer.bat  setup_builds.bat
cmake/: CXX11.cmake  FindSDL.cmake
models/: XYZRGB-Dragon.oct
src/: ChunkedAllocator.hpp  Debug.cpp  Debug.hpp  Events.cpp  Events.hpp  IntTypes.hpp  Main.cpp  PlyLoader.cpp  PlyLoader.hpp  ThreadBarrier.cpp  ThreadBarrier.hpp  Timer.hpp  Util.cpp  Util.hpp  VoxelData.cpp  VoxelData.hpp  VoxelOctree.cpp  VoxelOctree.hpp  tribox3.c
src/math/: Mat4.cpp  Mat4.hpp  MatrixStack.cpp  MatrixStack.hpp  Vec3.cpp  Vec3.hpp  Vec4.cpp  Vec4.hpp
src/ply/: ply.h  plyfile.c
src/thread/: TaskGroup.hpp  ThreadPool.cpp  ThreadPool.hpp  ThreadUtils.cpp  ThreadUtils.hpp
